# zenith-finder

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  ROADMAP.md  config.template.toml  config.toml  vcpkg-configuration.json  vcpkg.json
app/: CMakeLists.txt  app_controller.cpp  app_controller.hpp  app_state.hpp  config_manager.cpp  config_manager.hpp  location_provider.hpp  logger.cpp  logger.hpp  main.cpp  ui_style.hpp  windows_location_provider.cpp  windows_location_provider.hpp  zenith_ui.cpp  zenith_ui.hpp
app/ui/: ui_style.hpp  zenith_ui.cpp  zenith_ui.hpp
docs/: design v0.1.md  design v01.md  design v02.md  optimization_ideas.md  tasks v0.2.md  tasks v0.3.md  tasks v0.4.md  tasks v0.5.md  tasks v01.md  tasks v02.md
libengine/: CMakeLists.txt
libengine/include/: catalog_loader.hpp  constants.hpp  engine.hpp  julian.hpp
libengine/src/: catalog_loader.cpp  engine.cpp
scripts/: fetch_catalog.py  fetch_ephemeris.py  top_5000.sql
test/: CMakeLists.txt  benchmark_engine.cpp  test_catalog.cpp  test_engine.cpp  test_julian.cpp  test_location.cpp  test_main.cpp
